# raycasting-sandbox

./: .gitignore  README.md  app  test.c
atmega328p/: Makefile  lcd.c  lcd.cpp  lcd.h  main.c  main.cpp  math_utils.h
atmega328p/rel/: app.hex
fortran/: Makefile  Player.cpp  Ray.cpp  Ray.hpp  Wall.cpp  Wall.hpp  app  commons.hpp  fraycast.f90  gmon.out  main.cpp
fortran/SelbaWard/: Line.cpp
fortran/fsrc/: fdegrees.f90  fdist.f90  fheading.f90  fradians.f90
ggez-rust/: Cargo.toml
ggez-rust/src/: lib.rs  main.rs
macroquad/: Cargo.toml
macroquad/src/: main.rs  renderer.rs
ncurses/: Player.cpp  app  main.cpp
ncurses/headers/: Player.hpp
rpi-pico/src/: CMakeLists.txt  main.c  oled.c  oled.h
rust-doomlike/: Cargo.toml
rust-vulkan/: Cargo.toml
rust-vulkan/src/: app.rs  main.rs
rust-vulkan/src/app/: app_data.rs  commands.rs  device.rs  framebuffer.rs  instance.rs  pipeline.rs  render_pass.rs  shared.rs  swapchain.rs  sync_objects.rs  vertex.rs
rust-vulkan/src/app/device/: queue_family_indices.rs  swapchain_support.rs
rust-vulkan/src/app/pipeline/: shader_module.rs
rust-vulkan/src/shaders/: shader.frag  shader.vert  vert.spv
sfml/: Boundry.cpp  Boundry.hpp  Particle.cpp  Particle.hpp  Ray.cpp  Ray.hpp  app  commons.hpp  gmon.out  main.cpp
sfml-quads/: Makefile  Pixel.cpp  Pixel.hpp  Player.cpp  Player.hpp  Ray.cpp  Ray.hpp  Wall.cpp  Wall.hpp  app  commons.hpp  gmon.out  level1.txt  main.cpp
sfml-raymarching/: Ray.cpp  Ray.hpp  Wall.cpp  Wall.hpp  app  commons.hpp  gmon.out  main.cpp
sfml-rust/: Cargo.toml
sfml-rust-fast/: Cargo.toml
(+35 files in other folders)
